# VERITAS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  server.js
.github/: copilot-instructions.md
scripts/: init-db.sql
src/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/graph_store/: __init__.py
src/infrastructure/object_store/: __init__.py
src/infrastructure/postgres/: __init__.py  fact_store.py  models.py  session.py
src/infrastructure/vector_store/: __init__.py
src/infrastructure/workflow/: __init__.py
src/services/: __init__.py
src/services/api_gateway/: __init__.py  app.py  routes.py  schemas.py  solvency.py  validation.py
src/services/claim_service/: __init__.py  app.py  processor.py  schemas.py  service.py
src/services/evidence_service/: __init__.py  app.py  schemas.py  service.py
src/services/extraction_service/: __init__.py  app.py  schemas.py  service.py  service_impl.py
src/services/reasoning_engine/: __init__.py  app.py  engine.py  schemas.py  solvency.py
src/services/report_service/: __init__.py  app.py  generator.py  routes.py  schemas.py  service.py  stores.py
src/services/trace_audit_service/: __init__.py  app.py  builder.py  canonical.py  routes.py  schemas.py  service.py  stores.py
src/services/truth_orchestrator/: __init__.py  app.py  service.py
src/services/truth_versioning_service/: __init__.py  app.py  promotion.py  routes.py  schemas.py  service.py  stores.py
src/shared/: __init__.py
tests/: __init__.py  conftest.py  test_api_gateway_a1.py  test_claim_service_a3.py  test_evidence_service_a4.py  test_extraction_service_a5.py  test_reasoning_engine_a6.py  test_report_service_a9.py  test_trace_audit_service_a7.py  test_truth_versioning_service_a8.py
(+7 files in other folders)
